Aviva assignment: Angular2 + TypeScript + BootStrap (Updated)

--- a/aviva/index.html
+++ b/aviva/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular QuickStart</title>
+    <title>Aviva assignment: Angular2 + TypeScript + Bootstrap</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="app/assets/styles/bootstrap.min.css" rel="stylesheet">
